<resources>
    <string name="app_name">Master Minds</string>
    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_repeat_password">Repeat Password</string>
    <string name="prompt_first_name">Enter first name</string>
    <string name="prompt_last_name">Enter last name</string>
    <string name="Register">Register</string>
    <string name="action_sign_in_short">Log in</string>
    <string name="No_account">Don\'t have account?</string>
    <string name="Has_account">Already have an account?</string>
    <string name="welcome">"Welcome !"</string>
    <string name="First_name">First Name</string>
    <string name="Last_name">Last Name</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>

    <!--Strings related to Main Screen-->
    <string name="find_class">Join a Class!</string>
    <string name="subject_code">Subject Code</string>
    <string name="logout">Logout</string>
    <string name="logo">Logo</string>
    <!--Database-->
    <string name="database_connection_string">https://study-group-c445e-default-rtdb.europe-west1.firebasedatabase.app/</string>
    <string name="Subjects">Subjects</string>
    <!--Strings related to Subjects-->
    <string name="Subject">Subject Name</string>
    <string name="Subject_code">Subject Code</string>
    <string name="Professor">Professor</string>
    <string name="Members">No. of Members</string>
    <!--utils-->
    <string name="Search">Search</string>
    <string name="Join">Join</string>
    <string name="add_subject">Add a Subject</string>
    <!--Chat Windoe-->
    <string name="Subject_Details">View Details</string>

</resources>