<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/black"
    tools:context=".login.LoginActivity">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@color/black"
    tools:context=".login.LoginActivity">





        <ImageView
            android:id="@+id/logo"
            android:layout_width="105dp"
            android:layout_height="79dp"
            android:contentDescription="@string/logo"
            android:layout_marginTop="16dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/etUsername"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="50dp"
        android:autofillHints="name"
        android:background="@drawable/border"
        android:hint="@string/prompt_username"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:textAlignment="center"
        android:textColor="@color/orange"
        android:textColorHint="@color/orange"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
            android:id="@+id/etEmail"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/border"
            android:hint="@string/prompt_email"
            android:autofillHints="emailAddress"
            android:inputType="textEmailAddress"
            android:selectAllOnFocus="true"
            android:textAlignment="center"
            android:textColor="@color/orange"
            android:textColorHint="@color/orange"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etUsername" />

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/prompt_password"
            android:autofillHints="password"
            android:textColorHint="@color/orange"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/orange"
            android:textAlignment="center"
            android:background="@drawable/border"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etEmail" />
        <EditText
            android:id="@+id/etRepeatPassword"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:hint="@string/prompt_repeat_password"
            android:autofillHints="password"
            android:textColorHint="@color/orange"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@color/orange"
            android:textAlignment="center"
            android:background="@drawable/border"
            android:selectAllOnFocus="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etPassword" />


        <Button
            android:id="@+id/btnRegister"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="64dp"
            android:enabled="true"
            android:text="@string/Register"
            android:textColor="@color/orange"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etRepeatPassword"
            app:layout_constraintVertical_bias="0.126"
            app:strokeColor="@color/orange"
            app:strokeWidth="2dp"
            />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnRegister">

        <TextView
            android:id="@+id/tvHas_account"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:padding="5dp"
            android:text="@string/Has_account"
            android:textColor="@color/orange" />

        <TextView
            android:id="@+id/btnLog_in"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="16dp"
            android:padding="5dp"
            android:text="@string/action_sign_in_short"
            android:textColor="@color/orange"
            android:textColorLink="@color/orange"
            android:textStyle="bold" />


    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>